# galaxy-oss

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yaml  env.example  pyproject.toml
.github/workflows/: build.yml  on_pr.yml  python-package.yml  release_on_tag.yml
.gitlab/: CODEOWNERS
deploy/: update_version.py
deploy/docker/: Dockerfile
deploy/helm/galaxy/: Chart.yaml  README.md  values.yaml
deploy/helm/galaxy/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  flux-alert.yaml  flux-provider.yaml  secret.yaml  service.yaml  serviceaccount.yaml
examples/env/: env.aws  env.github  env.gitlab  env.opsgenie  env.pagerduty  env.sonarqube
galaxy/: __init__.py
galaxy/api/: __init__.py
galaxy/cli/: galaxy.py  validators.py
galaxy/cli/cookiecutter/: cookiecutter.json
galaxy/cli/cookiecutter/{{cookiecutter.integration_name}}/: client.py  config.yaml  main.py  routes.py
galaxy/cli/cookiecutter/{{cookiecutter.integration_name}}/.rely/: blueprints.json  mappings.yaml
galaxy/core/: api.py  blueprints.py  exceptions.py  galaxy.py  logging.py  magneto.py  main.py  mapper.py  models.py  resources.py  utils.py
galaxy/core/cli/: galaxy.py
galaxy/core/cli/cookiecutter/: cookiecutter.json
galaxy/core/cli/cookiecutter/{{cookiecutter.integration_name}}/: README.md  client.py  config.yaml
galaxy/core/tests/: test_galaxy.py  test_mapper.py  test_models.py
galaxy/integrations/aws/: README.md  client.py  config.yaml  main.py
galaxy/integrations/aws/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/integrations/bitbucket/: README.md  client.py  config.yaml  main.py
galaxy/integrations/bitbucket/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/integrations/flux/: README.md  client.py  config.yaml  main.py  models.py  routes.py
galaxy/integrations/flux/.rely/: blueprints.json  mappings.yaml
galaxy/integrations/gcp/: README.md  client.py  config.yaml  main.py
galaxy/integrations/gcp/.rely/: blueprints.json  mappings.yaml
galaxy/integrations/github/: README.md  client.py  config.yaml  main.py  queries.py  routes.py  utils.py
galaxy/integrations/github/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/integrations/gitlab/: README.md  client.py  config.yaml  main.py  queries.py  routes.py  utils.py
galaxy/integrations/gitlab/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/integrations/opsgenie/: README.md  client.py  config.yaml  main.py  utils.py
galaxy/integrations/opsgenie/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/integrations/pagerduty/: README.md  client.py  config.yaml  main.py  utils.py
galaxy/integrations/pagerduty/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/integrations/snyk/: README.md  client.py  config.yaml  main.py
galaxy/integrations/snyk/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/integrations/sonarqube/: README.md  client.py  config.yaml  main.py
galaxy/integrations/sonarqube/.rely/: automations.json  blueprints.json  mappings.yaml
galaxy/utils/: concurrency.py  itertools.py  parsers.py  requests.py  serializers.py
tests/: conftest.py  test_cli.py  test_cli_validators.py  test_mapper.py
